# arch-update-manager

./: README.md  pyproject.toml  updates.py
src/: cli.py  updater.py
src/archupdatemanager/: cli.py
